add v2 endpoint to get reports with spagination
